[gd_scene load_steps=6 format=3 uid="uid://test_unit_scene"]

[ext_resource type="Script" path="res://mods/_sandbox/scenes/test_unit.gd" id="1_script"]
[ext_resource type="Script" path="res://core/systems/camera_controller.gd" id="2_camera"]
[ext_resource type="Script" path="res://core/resources/grid.gd" id="3_grid"]
[ext_resource type="FontFile" uid="uid://cqlbwopye8b43" path="res://assets/fonts/monogram.ttf" id="4_font"]
[ext_resource type="TileSet" uid="uid://c8kv3jx2wr7pb" path="res://assets/tilesets/highlight_tileset.tres" id="5_highlight"]

[sub_resource type="TileSet" id="TileSet_test"]
tile_size = Vector2i(32, 32)

[sub_resource type="Resource" id="Grid_test"]
script = ExtResource("3_grid")
grid_size = Vector2i(20, 11)
cell_size = 32

[node name="TestUnit" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
offset_right = 10000.0
offset_bottom = 10000.0
color = Color(0.15, 0.2, 0.15, 1)

[node name="Map" type="Node2D" parent="."]

[node name="GroundLayer" type="TileMapLayer" parent="Map"]
tile_set = SubResource("TileSet_test")

[node name="HighlightLayer" type="TileMapLayer" parent="Map"]
z_index = 1
tile_set = ExtResource("5_highlight")

[node name="Units" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(320, 180)
script = ExtResource("2_camera")
grid = SubResource("Grid_test")
follow_mode = 0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DebugLabel" type="Label" parent="UI/HUD"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 300.0
offset_bottom = 150.0
theme_override_fonts/font = ExtResource("4_font")
theme_override_font_sizes/font_size = 16
text = "Unit Test
Loading..."
